--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,4 @@
-RewriteCond %{HTTP_USER_AGENT} ^HTTrack [OR]
-RewriteCond %{HTTP_USER_AGENT} ^SiteSucker [OR]
-RewriteCond %{HTTP_USER_AGENT} ^WebZip [OR]
-RewriteCond %{HTTP_USER_AGENT} ^WebCopier [OR]
-RewriteCond %{HTTP_USER_AGENT} ^Zeus
-RewriteRule ^.*$ no_download.html [L] 
+AuthType Basic
+AuthName "Password Protected Area"
+AuthUserFile {PATH_TO_HTPASSWORD_FILE}
+Require valid-user
